# oiTerminal

./: .buildinfo  .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  Design.md  LANG.md  LICENSE  LICENSE_VirtualJudge_spider  Makefile  README  README.md  TODO.md  _config.json  config.json  const.py  contest.py  curry.py  db.py  genindex.html  index.html  lang.json  lang.py  language.json  modules.html  objects.inv  oiTerminal.py  oi_cli2.abstract.html  oi_cli2.cli.adaptor.Codeforces.html  oi_cli2.cli.adaptor.html  oi_cli2.cli.html  oi_cli2.core.html  oi_cli2.custom.AtCoder.html  oi_cli2.custom.Codeforces.html  oi_cli2.custom.html  oi_cli2.html  oi_cli2.model.html  oi_cli2.utils.consts.html  oi_cli2.utils.html  (+20 more)
.devcontainer/: devcontainer.json
.github/workflows/: doc-sphinx-2-gh-pages.yml  unit-test.yml
_modules/: index.html
_modules/tests/: test_account.html  test_analyze.html  test_db.html  test_enc.html  test_template.html
_sources/: modules.rst.txt  oi_cli2.abstract.rst.txt  oi_cli2.cli.adaptor.Codeforces.rst.txt  oi_cli2.cli.adaptor.rst.txt  oi_cli2.cli.rst.txt  oi_cli2.core.rst.txt  oi_cli2.custom.AtCoder.rst.txt  oi_cli2.custom.Codeforces.rst.txt  oi_cli2.custom.rst.txt  oi_cli2.model.rst.txt  oi_cli2.rst.txt  oi_cli2.utils.consts.rst.txt  oi_cli2.utils.rst.txt  testlogin.rst.txt  tests.rst.txt
_sources/dev/: publish.rst.txt
_sources/usage0.2/: 02_config.rst.txt  05_submit.rst.txt  06_proxy.rst.txt  07_faq.rst.txt  config.rst.txt  contest.rst.txt  index.rst.txt  install.rst.txt
_static/: documentation_options.js
auto-compelement/: ot-auto-complete.py  ot-auto-complete.sh
auto-completion/: gen-ot-auto-completion.sh  ot-auto-completion.py  ot-auto-completion.sh
config/: Main.cpp
dev/: doc.html  index.html  publish.html
docs/: .gitignore  conf.py  dev.md  index.rst  usage.md
docs/dev/: doc.rst  index.rst  publish.rst
docs/source/: conf.py  index.rst  usage.rst
docs/usage0.1/: index.rst  install.rst
docs/usage0.2/: 01_init.rst  02_config.rst  03_contest.rst  05_submit.rst  index.rst  install.rst  submit.rst  test.rst
oiTerminal/: core.py  model.py  platformsClassName.py  unused.py  utils.py  what.py
oiTerminal/Model/: Account.py  Contest.py  FolderState.py  LangKV.py  Problem.py  Result.py  TestCase.py  TestCases.py
oiTerminal/abstract/: HtmlTagAbstract.py
oiTerminal/cli/: account.py  analyze.py  config.py  constant.py  contest.py  contestdetail.py  contestlist.py  init.py  problem.py  standing.py  submit.py  template.py  test.py
oiTerminal/core/: hey.py  problem.py  provider.py
oiTerminal/model/: Account.py  Analyze.py  BaseOj.py  Contest.py  FolderState.py  LangKV.py  ParseProblemResult.py  Problem.py  Result.py  Template.py  TestCase.py
oi_cli2/: __init__.py
scripts/: submit.py  test.py
template/: Main.cpp  Main.go  Main.java  Main.rs  README.md
tests/: test_Account.py  test_Contest.py  test_Problem.py  test_Result.py  test_TestCase.py  test_account.py  test_analyze.py  test_db.py  test_enc.py  test_langKV.py  test_template.py
unused/: Notes.md  model.py
usage0.1/: index.html  install.html
usage0.2/: 00_install.html  01_init.html  02_config.html  03_contest.html  04_test.html  05_submit.html  06_proxy.html  07_faq.html  config.html  contest.html  index.html  init.html  install.html  submit.html  test.html
(+169 files in other folders)
