[aliases]
release = egg_info -Db ''

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 3.0
testpaths = ./tests
python_files = test_*.py

[pytest]
testpaths = ./tests
python_files = test_*.py

[coverage:run]
branch = True
source =
    oiTerminal
    tests

[coverage:paths]
source =
    oiTerminal
    .tox/*/lib/python*/site-packages/oiTerminal
    .tox/pypy/site-packages/oiTerminal
